--- a/style.css
+++ b/style.css
@@ -53,8 +53,11 @@ label #btn{
     line-height: 24px;
     margin-right: 40px;
     cursor: pointer;
-    display: none;
+    display: block;
 
+}
+.humburger{
+    display: none;
 }
 label #cancel{
     color: #0f0d0d;
@@ -599,6 +602,202 @@ img.my_cart_img {
 
 /* card end */
 
+.bg-color2{
+     background-color: rgb(247 247 247);
+}
+
+.quries-section{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    /* padding-bottom: 2rem; */
+    padding: 4rem 3rem;
+    
+}
+
+.quries{
+    display: flex;
+    /* text-align: center; */
+    font-family: "Poppins", sans-serif;
+    /* margin-top: 5rem; */
+    flex-direction: column;
+    align-items: center;
+    line-height: 21px;
+}
+
+.qurey-heading{
+    color: rgb(36 42 69);
+    font-size: 1.5rem;
+    line-height: 2rem;
+}
+
+.qurey-para{
+        text-align: center;
+    color: rgb(145 148 162);
+    /* margin-top: 1rem; */
+    /* padding: 0 15rem; */
+    max-width: 50%;
+}
+
+.question-section{
+    display: flex;
+    /* justify-content: center; */
+    flex-direction: column;
+    /* align-items: center; */
+    margin-top: 2rem;
+    width: 50%;
+}
+
+.questions{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+    /* margin-top: 1rem ; */
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    border-bottom: 1px;
+
+     /* padding: 0 1rem; */
+}
+
+.flex-1{
+    /* margin: 0 2rem; */
+    font-family: "Poppins", sans-serif;
+    font-weight: 500;
+    text-align: center;
+  /* flex: 1 1 0%; */
+}
+
+.fa-angle-down{
+    color: rgb(82 103 223 );
+    font-weight: 900;
+    cursor: pointer;
+    align-items: center;
+    /* margin-left: 4rem */
+}
+
+
+.m-info{
+    width: 115px;
+    height: 50px;
+    text-transform: capitalize;
+    color: #FFFFFF;
+    background-color: rgb(82 103 223);
+    font-family: "Poppins", sans-serif;
+    margin-top: 2rem;
+}
+
+.blue-section{
+    background-color: rgb(82 103 223 ) ;
+    /* margin-top: 7rem; */
+
+}
+
+.contact-section{
+    padding: 3rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.price{
+    color: #FFFFFF;
+}
+
+.contact-heading{
+    font-size: 1.5rem;
+    line-height: 2rem;
+    color: #FFFFFF;
+}
+
+.contact{
+    margin-top: 1rem;
+}
+
+input{
+    width: 403px;
+    height: 55px;
+    border-radius: .375rem;
+    border: none;
+}
+input::placeholder{
+    text-transform: capitalize;
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
+    padding-left: 0.75rem;
+}
+
+.contact-btn{
+    height: 50px;
+    width: 120px;
+    margin-left: .8rem;
+    text-align: center;
+    text-transform: capitalize;
+
+
+}
+footer{
+    background-color: rgb(36 42 69);
+
+}
+.footer-section{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+     padding-top: 2rem;
+    padding-bottom: 2rem;
+    /* padding-left: 13rem;  */
+}
+
+.footer-items{
+    display: flex;
+    align-items: center;
+}
+
+
+.footer-menu{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer-menu li{
+    list-style: none;
+    padding: 0 .75rem;
+    color: #FFFFFF;
+    text-transform: uppercase;
+     font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-size: .8rem;
+    margin-top: .75rem;
+}
+
+.footer-icons{
+    display: flex;
+    gap: 50px;
+}
+
+.fa-twitter{
+    color: #FFFFFF;
+    font-size: 30px;
+
+}
+
+.fa-facebook{
+    color: #FFFFFF;
+    font-size: 30px;
+
+}
+    
+
+
+
+
+
 
 
 
@@ -640,12 +839,30 @@ img.my_cart_img {
 } */
 
 
+/* @media only screen and (min-width: 1800px) {
+    .logo-img{
+    height: 50px;
+   
+}
+
+} */
+
+@media only screen and (max-width: 1200px) {
 
 
+    .card-body button {
+
+        height: 64px;
+    }
+.buttons {
+    margin-right: 3rem;
+    margin-top: 1rem;
+}
+}
 
 
-@media only screen and (max-width: 991px) {
-  .half-blue-bg,.half-circle,second-half-circle,third-half-circle{
+@media only screen and (max-width: 992px) {
+  .half-blue-bg,.half-circle,.second-half-circle,.third-half-circle{
     display: none;
   }
   .main_cart{
@@ -654,6 +871,33 @@ img.my_cart_img {
 
   .container, .container-md, .container-sm {
     max-width: 1000px;
+}
+.butt2{
+    margin-top: 5px;
+}
+
+.first-image {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* flex-direction: column; */
+}
+.info-img {
+    /* z-index: 4; */
+    /* height: 390px; */
+    /* position: relative; */
+    /* margin-left: 3rem; */
+    margin-top: -8rem;
+    width: 100%;
+        margin-left: -10px;
+}
+.fourth-text {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* margin-left: 3rem; */
+    /* text-align: center; */
+}
 }
 
 @media only screen and (max-width: 767px) {
@@ -673,7 +917,46 @@ img.my_cart_img {
    .rd-card{
      margin-top: 5px;
   }
+.first-image {
+    margin-top: 20px;
+}
+.humburger{
+    display: block;
+    font-size: 40px;
+}
+.footer-section,.footer-items {
+    flex-direction: column;
+}
 
+.qurey-para{
+        
+    max-width: 100%;
+}
+
+.question-section{
+    
+    max-width: 100%;
+}
+.contact {
+ 
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+ 
+}
+.input-contact{
+    margin-bottom: 10px;
+}
+
+
+.card-body button {
+
+        height: 48px;
+    }
+    .butt2{
+    margin-top: 0px;
+}
 
 }
 
